accessibilityforusers.html added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <h2>Implementing Accessibility or Design for All</h2>
     <ul>
-      <li><a href="courses.html">(Online) Courses and Accessibility or Disability</a>
+      <li><a href="courses.html">(Online) Courses on Accessibility or Disability</a>
       </li>
       <li><a href="designforall.html">Design for All</a></li>
       <li><a href="personas.html">Personas</a>.
@@ -58,21 +58,18 @@
 
 
     <h2>Personalisation</h2>
+    <p>General Public Inclusive Infrastucture (<abbr>GPII</abbr>):</p>
     <ul>
-      <li><abbr title="General Public Inclusive Infrastucture">GPII</abbr>:
-        <ul>
-          <li>
-            <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a>.
-          </li>
-          <li>
-            <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
-          </li>
-        </ul>
+      <li>
+        <a href="gpii/gpii-for-developers.html"><abbr>GPII</abbr>/Cloud4all for Developers</a>.
+      </li>
+      <li>
+        <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
       </li>
     </ul>
 
 
-    <h2>Other</h2>
+    <h2>Other Topics</h2>
     <ul>
       <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a>.
       </li>
@@ -87,6 +84,8 @@
       <li><a href="contentaccessibility.html">Content Accessibility</a>.
       </li>
       <li><a href="tts.html">Text-to-speech software</a>.
+      </li>
+      <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a>
       </li>
     </ul>
 
