terminology.html added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
       </li>
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a>
       </li>
+      <li><a href="terminology.html">Terminology</a>
+      </li>
     </ul>
 
 
