--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </header>
 
   <main>
+  <section>
     <h2>Web</h2>
     <ul>
       <li><a href="WebAppAccessibilityResources.html">Web Application Accessibility Resources</a>.
@@ -29,13 +30,17 @@
       <li><a href="contentmanagement.html">Content Management Systems (<abbr>CMS</abbr>)</a>.
       </li>
     </ul>
+  </section>
 
+  <section>
     <h2>Mobile</h2>
     <ul>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility Resources</a>.
       </li>
     </ul>
+  </section>
 
+  <section>
     <h2>Desktop</h2>
     <ul>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility Resources</a>.
@@ -44,7 +49,9 @@
         <abbr title="graphical user interface">GUI</abbr> Toolkit Accessibility Resources</a>.
       </li>
     </ul>
+  </section>
 
+  <section>
     <h2>Implementing Accessibility or Design for All</h2>
     <ul>
       <li><a href="courses.html">(Online) Courses on Accessibility or Disability</a>
@@ -55,8 +62,9 @@
       <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>.
       </li>
     </ul>
+  </section>
 
-
+  <section>
     <h2>Personalisation</h2>
     <p>General Public Inclusive Infrastucture (<abbr>GPII</abbr>):</p>
     <ul>
@@ -67,8 +75,9 @@
         <a href="gpii/integrating-sublimetext.html">Integrating Sublime Text with <abbr>GPII</abbr></a>.
       </li>
     </ul>
+  </section>
 
-
+  <section>
     <h2>Other Topics</h2>
     <ul>
       <li><a href="GameAccessibilityResources.html">Game Accessibility Resources</a>.
@@ -90,8 +99,10 @@
       <li><a href="terminology.html">Terminology</a>
       </li>
     </ul>
+  </section>
 
-
+  <div class="other">
+  <hr />
     <h2>Unsorted Links</h2>
     <h3>European Projects</h3>
     <ul>
@@ -183,6 +194,7 @@
       </li>
       -->
     </ul>
+  </div>
       <!-- CAPTCHA: 
         * CAPTCHA: Inaccessible to Everyone: http://www.sitepoint.com/captcha-inaccessible-to-everyone/
         * CAPTCHA: How to do it right (ie. don't use CAPTCHA!): http://www.linkedin.com/pulse/20140831232143-25659818-captcha-how-to-do-it-right-ie-don-t-use-captcha 
