Monitor-WA final report.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
         Marix Verlag, 2017.
         <a href="http://www.verlagshaus-roemerweg.de/Marix_Verlag/Birgit_Adam-Das_Buch_der_Blindenschrift-EAN:9783865392176.html"><abbr>ISBN</abbr> 978-3-86539-217-6</a>.
       </li>
+      <li>
+        <a href="https://ec.europa.eu/digital-single-market/en/news/monitoring-methodologies-web-accessibility-european-union">Monitoring methodologies for Web Accessibility in the European Union</a>,
+        final report of the study
+        <a href="http://www.monitor-wa.eu/">Monitoring web-accessibility / SMART 2014-0061</a> (November 2016).
+        <!-- @@check/read -->
+      </li>
       <!-- 
       <li>
         <a href=""></a>
