SMART-ASD on FutureLearn.

--- a/courses.html
+++ b/courses.html
@@ -130,6 +130,15 @@
         <a href="http://gpii.eu/moocap/?page_id=655">further courses</a> in 2017.
       </li>
       <li>
+        <a href="https://www.futurelearn.com/courses/supporting-autism">SMART-<abbr>ASD</abbr>: Matching Autistic People with Technology Resources</a>
+        by the University of Bath (<abbr>UK</abbr>) is a 4-week course hosted on FutureLearn.
+        The course is about technology that can be used to support children with
+        Autism Spectrum Disorder (<abbr>ASD</abbr>) who als have an Intellectual Disability (<abbr>ID</abbr>).
+        The course is aimed at parents, carers and practitions and does not require
+        any previous experience of the subject.
+        The next run of the course starts on 3 April 2017.
+      </li>
+      <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
         is a 4-week course by Ryerson University, hosted on Canvas.
         The latest run of the course started on 14 November and ended on 12 December 2016.
