--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -38,7 +38,7 @@
       padding: .1em;
       border-left: 4px solid white;
     }
-    */
+  */
   </style>
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
@@ -873,7 +873,22 @@
           </li>
         </ul>
       </li>
-      <!-- step 4.6: quiz by HiOA & JKH: @@no OER? -->
+      <li class="HIOA">Web Form Accessibility Exercises
+        (<a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4NFdEZzduamtLTmM">Google Drive folder</a>).
+        <br />© Copyright Weiqin Chen, Oslo and Akershus University College of Applied Sciences, 2015.
+        <ul>
+          <li id="fl-step-4-06a">
+            <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4MGpLcm9PcjJjSTg">Web Form Accessibility Quiz (Microsoft Word document)</a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4TDFxZklfZHI1V0U">Advanced Exercise on Web Form Accessibility (Microsoft Word document)</a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4cUY5bE5jejdNSXM">Advanced Exercise (ZIP file)</a>
+          </li>
+        </ul>
+      </li>
+      <!-- step 4.6: 2 questions by JKU: @@no OER? -->
       <!-- step 4.7: What barriers can a web form have for people with limited dexterity? -->
       <li class="HIOA">General Discussion on Web Accessibility<!-- no focus on dexterity -->
         (<a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4VXJxWEpUY29Pajg">Google Drive folder</a>):
@@ -985,21 +1000,6 @@
         (<a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4M2FxRGFHSUo1TGs">Google Drive folder</a>):
         <br /><a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4WWpTOTFsckRvU2c">Linking Accessibility Barriers to <abbr>WCAG</abbr> 2.0 (Microsoft Word document)</a>
         <br />© Copyright Weiqin Chen, Oslo and Akershus University College of Applied Sciences, 2015.
-      </li>
-      <li class="HIOA">Web Form Accessibility Exercises
-        (<a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4NFdEZzduamtLTmM">Google Drive folder</a>).
-        <br />© Copyright Weiqin Chen, Oslo and Akershus University College of Applied Sciences, 2015.
-        <ul>
-          <li>
-            <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4MGpLcm9PcjJjSTg">Web Form Accessibility Quiz  (Microsoft Word document)</a>
-          </li>
-          <li>
-            <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4TDFxZklfZHI1V0U">Advanced Exercise on Web Form Accessibility (Microsoft Word document)</a>
-          </li>
-          <li>
-            <a href="https://drive.google.com/open?id=0B9GyZ3n5dNZ4cUY5bE5jejdNSXM">Advanced Exercise (ZIP file)</a>
-          </li>
-        </ul>
       </li>
     </ul>
 
