WHO & TravelWayFinding.com.

--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@
         <a href="http://www.monitor-wa.eu/">Monitoring web-accessibility / SMART 2014-0061</a> (November 2016).
         <!-- @@check/read -->
       </li>
+      <li>World Health Organization (<abbr>WHO</abbr>):
+        <a href="http://www.who.int/mediacentre/factsheets/fs352/en/">Disability and health</a>.
+        Fact sheet. Reviewed November 2016.
+      </li>
+      <li>TravelWayfinding.com: 
+        <a href="http://www.travelwayfinding.com/visually-impaired/">Visually Impaired and Blind Travellers Wayfinding Issues and Solutions</a>.
+      </li>
       <!-- 
       <li>
         <a href=""></a>
