--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -140,15 +140,18 @@
         <br />Text: © Copyright: Dublin Institute of Technology and The University of Southampton, 2016.
         Image: © Copyright: The University of Southampton, 2016.
       </li>
-      <li class="incorrectcopyright">
-        <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZnB4YVF5dWdQbkk">Challenges for day-in-the-life stories</a>
-        <br />Text: © Copyright: The University of Southampton, 2015.
+      <li>
+        <a href="https://docs.google.com/document/d/1D9niwbnIx3pX5xmux4CCmiwq03pT82uiHqQJmlStSH0">Challenges for day-in-the-life stories</a>
+        <br />Text: © Copyright: <span lang="nb">Høgskolen i Oslo og Akershus</span>, <abbr lang="de" title="Hochschule der Medien">HdM</abbr> Stuttgart, 
+        University of Southampton, <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>, Dublin Institute of Technology, 
+        <span lang="de">Technische Universität Dresden, Johannes Kepler Universität Linz</span>, 
+        <span lang="el">Πανεπιστήμιο Αιγαίου</span> (University of the Aegean), 2016.
         Image: © Copyright: The University of Southampton, 2016.
-        <!-- @@ copyright for text and images: only Southampton???, CC BY 4.0 -->
+        <!-- Challenges for Day in the Life.docx -->
       </li>
-      <li class="missingcopyright nocclicence">
-        <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqZGVKV2ctbzNyUTg">Please add your thoughts about Personas</a>
-        <!-- @@no copyright or licence. @@They shouldn't be called personas.-->
+      <li>
+        <a href="https://drive.google.com/open?id=1-lDEIn-lG3w6q-0g-FOtEitXZ2XZSK0PMuaJ50cBfjw">Please add your thoughts about the day-in-the-life stories</a>.
+        <br />© Copyright E.A. Draffan, University of Southampton, 2015.
       </li>
     </ul>
 
@@ -263,6 +266,8 @@
             <a href="https://vimeo.com/204397000">Video on Vimeo</a> and 
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqN1NQSVQxM3kteFk">Video transcript (Microsoft Word document)</a>
             of a video that shows different types of visual stress.<!-- OER: https://drive.google.com/open?id=0BwcWJ_CGWdF3UXBBWGZqUzlDTzg -->
+            <a href="https://drive.google.com/open?id=1q1MeIYx48cIUB3SbpITrito4NLmuI0uOFTaeUQ7DqEw">Transcript of the video</a>
+            (© Copyright E.A. Draffan, University of Southampton, 2015).
           </li>
         </ul>
       </li>
@@ -307,12 +312,12 @@
             Because it is meant for a captioning exercise, the video has no captions.
           </li>
         </ul>
-      <li class="UOS" id="fl-step-1-15">Barriers to Communication. 
+      <li class="UOS" id="fl-step-1-15">Barriers to Communication / Using Symbols to Communicate. 
         <!-- OER folder: https://drive.google.com/drive/folders/0B5w8EXu9wtOqaUtPNDVzdmFNMms @@no Assets Registry -->
         <br />© Copyright E.A. Draffan, University of Southampton, 2015.<!-- @@not proper OER; wrong template -->
         <ul>
           <li>
-            <a href="https://drive.google.com/open?id=1DH9aZqg0YjJuBa9I7uHW6fHXA54z7RLyTAkX_fvCDJY">Barriers to Communication (Microsoft Word document)</a>.
+            <a href="https://drive.google.com/open?id=1DH9aZqg0YjJuBa9I7uHW6fHXA54z7RLyTAkX_fvCDJY">Using Symbols to Communicate (Microsoft Word document)</a>.
           </li>
           <li>Images used in the Word document:
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqcEhPNFpMVEItN0U">friends planning secret part.png</a>,
