How (Not) to Talk to ...

--- a/terminology.html
+++ b/terminology.html
@@ -98,6 +98,19 @@
       -->
     </ul>
 
+    <h2>How to Talk (Or Not to Talk) to People with Disabilities</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=ykW4tYbRgo8">Things Not To Say To A Blind Person</a>,
+        <a href="https://www.youtube.com/watch?v=1RLTtk9Mc14">Things Not To Say To Someone Who Uses A Wheelchair</a>,
+        <a href="https://www.youtube.com/watch?v=d69tTXOvRq4">Things Not To Say To An Autistic Person</a> and
+        <a href="https://www.youtube.com/watch?v=AAPmGW-GDHA">Things People With Down's Syndrome Are Tired of Hearing</a>
+        (quote: <q>The only thing I suffer from are bad attitudes</q>, <abbr>i.e.</abbr> the bad attitudes of people with preconceived ideas about Down syndrome).
+        These videos are part of a longer series by <abbr>BBC</abbr> 3 about 
+        <a href="https://www.youtube.com/playlist?list=PL64ScZt2I7wGxZlXAu0r0UPqpvzF23mgc">Things Not To Say To &hellip;</a>.
+      </li>
+    </ul>
+
     <h2>Links to Glossaries</h2>
     <ul>
       <li><abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>):
