FL course about autism.

--- a/courses.html
+++ b/courses.html
@@ -139,6 +139,11 @@
         The next run of the course starts on 3 April 2017.
       </li>
       <li>
+        <a href="https://www.futurelearn.com/courses/autism">Understanding Autism</a>
+        by the University of Kent (<abbr>UK</abbr>) is 4-week course hosted on FutureLearn.
+        The next run of the course starts on 1 May 2017.
+      </li>
+      <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
         is a 4-week course by Ryerson University, hosted on Canvas.
         The latest run of the course started on 14 November and ended on 12 December 2016.
