Universal Design, Inclusive Design etc.

--- a/terminology.html
+++ b/terminology.html
@@ -111,6 +111,59 @@
       </li>
     </ul>
 
+    <h2>Accessibility, Universal Design, Inclusive Design and Related Concepts</h2>
+    <ul>
+      <li>Design Council (<abbr>UK</abbr>):
+        <a href="http://www.designcouncil.org.uk/resources/guide/principles-inclusive-design">The principles of inclusive design</a>:
+        <blockquote><p>Inclusive design aims to remove the barriers that create undue effort and separation. 
+        It enables everyone to participate equally, confidently and independently in everyday activities.</p></blockquote>
+      </li>
+      <li>Sensory Trust (<abbr>UK</abbr>):
+        <a href="http://www.sensorytrust.org.uk/information/factsheets/what-is-inclusive-design.html">What is Inclusive Design?</a>
+        <blockquote><p>Inclusive design (also called universal design) makes places usable by everyone, regardless of age, ability and circumstance. 
+        It is based on the simple principle that designing for the widest range of people creates better designs and benefits everyone. 
+        No costly retrofits, happy users and great designs.</p></blockquote>
+      </li>
+      <li>Design Buildings Wiki: 
+        <a href="https://www.designingbuildings.co.uk/wiki/Inclusive_design">Inclusive design</a>:
+        cites the definitions of inclusive design according to the British Standards Institute (2005),
+        a <abbr>UK</abbr> government policy paper and
+        the Commission for Architecture and the Built Environment (<abbr>CABE</abbr>),
+        and the principles of universal design.
+      </li>
+      <li>The Norwegian Centre for Design and Architecture:
+        Inclusive Design - a people centered strategy for innovation: 
+        <a href="http://www.inclusivedesign.no/practical-tools/definitions-article56-127.html">Definitions</a>.
+        Defines Inclusive Design (based on the <abbr>UK</abbr> government's definition),
+        Universal Design (<abbr>USA</abbr>) and Design For All.
+      </li>
+      <li>Inclusive Design Toolkit (University of Cambridge):
+        <a href="http://www.inclusivedesigntoolkit.com/whatis/whatis.html#p40">Comparison with 'Universal design'</a>:
+        <blockquote><p>In contrast, inclusive design originated with product design, and focuses on choosing an appropriate target market for a particular design, 
+        and making informed decisions to maximise the 'Product performance indicators' for that target market. 
+        While inclusive design intends to extend the reach of mainstream products, 
+        it acknowledges the commercial constraints associated with satisfying the needs of the target market.</p></blockquote>
+        <p>This definition of inclusive design differs from the one provided by the <abbr>UK</abbr> government.
+      </li>
+      <!-- 
+      Universal Design: see also http://universaldesign.ie/What-is-Universal-Design/The-7-Principles/ and http://universaldesign.ie/What-is-Universal-Design/Conference-Proceedings/Universal-Design-for-the-21st-Century-Irish-International-Perspectives/.
+      Universal Design for Learning (UDL):
+        * http://www.udlcenter.org/aboutudl/whatisudl 
+        * https://www.d2l.com/blog/universal-design-learning-philosophy/ 
+      <li>
+        <a href=""></a>
+      </li>
+      <li>
+        <a href=""></a>
+      </li>
+      <li>Office for Disability Issues (<abbr>UK</abbr>):
+        <a href="https://www.gov.uk/government/collections/built-environment-professional-education-project">Built Environment Professional Education Project</a>:
+        (14 August 2015):
+        <blockquote><p>Inclusive design is a process that ensures that all buildings, places and spaces can be easily and comfortably accessed and used by everyone.</p></blockquote>
+      </li>
+      -->
+    </ul>
+
     <h2>Links to Glossaries</h2>
     <ul>
       <li><abbr>MOOC</abbr> Accessibility Partnership (<abbr>MOOCAP</abbr>):
