duplicate ID: fl-step-5-04.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1039,7 +1039,7 @@
           </li>
         </ul>
       </li>
-      <li class="UAEGEAN" id="fl-step-5-04">Inside Your Home: Your Experiences of Operating Domestic Appliances
+      <li class="UAEGEAN" id="fl-step-5-04b">Inside Your Home: Your Experiences of Operating Domestic Appliances
         (<a href="https://drive.google.com/drive/folders/0B-kbLV8R6-18YTN5cjNlcnloM0k">Google Drive folder</a>).
         <br />© Copyright Author/copyright: Jenny Darzentas, University of the Aegean 2015-2016.
         <ul>
