Intellectual, cognitive, psychological D.

--- a/terminology.html
+++ b/terminology.html
@@ -97,6 +97,26 @@
       </li>
       -->
     </ul>
+    <p>The terms used to refer to disorders related to intellectual, cognitive or psychological aspects
+      have change over time. The terms used may also differ from country to country. For example:
+    </p>
+    <ul>
+      <li>General learning disability (in the <abbr>UK</abbr>) or intellectual disability (<abbr>ID</abbr>)
+        <q>is a generalized neurodevelopmental disorder characterized by significantly impaired intellectual and adaptive functioning</q>
+        (<cite><a href="https://en.wikipedia.org/wiki/Intellectual_disability">Wikipedia</a></cite>).
+        This term now replaces older labels such as &ldquo;mental retardation&rdquo; or &ldquo;mental handicap&rdquo;.
+      </li>
+      <li>Specific learning disability or <abbr>SpLD</abbr> (in the <abbr>UK</abbr>) or
+        learning disability / learning disorder (<abbr>USA</abbr> and Canada) refers to
+        <q> several areas of functioning in which a person has difficulty learning in a typical manner, usually caused by an unknown factor or factors</q>
+        (<cite><a href="https://en.wikipedia.org/wiki/Learning_disability">Wikipedia</a></cite>).
+        Examples include
+        <a href="https://en.wikipedia.org/wiki/Dyslexia">dyslexia</a>,
+        <a href="https://en.wikipedia.org/wiki/Dyscalculia">dyscalculia</a>
+        and 
+        <a href="https://en.wikipedia.org/wiki/Dysgraphia">dysgraphia</a>.
+      </li>
+    </ul>
 
     <h2>How to Talk (Or Not to Talk) to People with Disabilities</h2>
     <ul>
