AAIDD def of ID; dfn elements added.

--- a/terminology.html
+++ b/terminology.html
@@ -101,14 +101,18 @@
       have change over time. The terms used may also differ from country to country. For example:
     </p>
     <ul>
-      <li>General learning disability (in the <abbr>UK</abbr>) or intellectual disability (<abbr>ID</abbr>)
+      <li><dfn>General learning disability</dfn> (in the <abbr>UK</abbr>) or <dfn>intellectual disability</dfn> (<abbr>ID</abbr>)
         <q>is a generalized neurodevelopmental disorder characterized by significantly impaired intellectual and adaptive functioning</q>
         (<cite><a href="https://en.wikipedia.org/wiki/Intellectual_disability">Wikipedia</a></cite>).
         This term now replaces older labels such as &ldquo;mental retardation&rdquo; or &ldquo;mental handicap&rdquo;.
+        <br />The American Association on Intellectual and Developmental Disabilities (<abbr>AAIDD</abbr>) defines
+        intellectual disability as follows:
+        <q>a disability characterized by significant limitations in both intellectual functioning and in adaptive behavior, which covers many everyday social and practical skills. This disability originates before the age of 18.</q>
+        (Source: <cite><abbr>AAIDD</abbr>: <a href="http://aaidd.org/intellectual-disability/definition#.WMFD41Xyi71">Definition of Intellectual Disability</a></cite>.)
       </li>
-      <li>Specific learning disability or <abbr>SpLD</abbr> (in the <abbr>UK</abbr>) or
-        learning disability / learning disorder (<abbr>USA</abbr> and Canada) refers to
-        <q> several areas of functioning in which a person has difficulty learning in a typical manner, usually caused by an unknown factor or factors</q>
+      <li><dfn>Specific learning disability</dfn> or <abbr>SpLD</abbr> (in the <abbr>UK</abbr>) or
+        <dfn>learning disability</dfn> / learning disorder (<abbr>USA</abbr> and Canada) refers to
+        <q>several areas of functioning in which a person has difficulty learning in a typical manner, usually caused by an unknown factor or factors</q>
         (<cite><a href="https://en.wikipedia.org/wiki/Learning_disability">Wikipedia</a></cite>).
         Examples include
         <a href="https://en.wikipedia.org/wiki/Dyslexia">dyslexia</a>,
