--- a/terminology.html
+++ b/terminology.html
@@ -283,6 +283,25 @@
       * Print disability
         * Inclusive Publishing Hub (DAISY Consortium initiative): "Digital content empowers accessible reading": https://inclusivepublishing.org/consumer/accessible-reading/ 
     -->
+
+    <h2>Other Terms and Links</h2>
+    <p>Mutisensory or multi-sensory design is the name of an approach that has been proposed in
+      some publications, for example:
+    </p>
+    <ul>
+      <li>Cearbhall O’Meadhra, Fighting Blindness (Ireland):
+        <a href="https://www.fightingblindness.ie/multisensory-design/">Multisensory design</a>
+      </li>
+      <li><span lang="nl">Schifferstein, Hendrik N. J.</span>:
+        <a href="http://dl.acm.org/citation.cfm?doid=2079216.2079270">Multi sensory design</a>,
+        <i class="proceedings">DESIRE '11: Procedings of the Second Conference on Creativity and Innovation in Design</i>,
+        <span lang="nl">Eindhoven</span>, Netherlands, 19–21 October 2011.
+      </li>
+    </ul>
+    <p>See also <a href="https://www.understood.org/en/school-learning/partnering-with-childs-school/instructional-strategies/multisensory-instruction-what-you-need-to-know">Multisensory Instruction: What You Need to Know</a>
+      by Amanda Morin.
+    </p>
+
   </main>
 
   <footer>
