Disabled World: Cognitive Disabilities.

--- a/terminology.html
+++ b/terminology.html
@@ -121,6 +121,8 @@
         <a href="https://en.wikipedia.org/wiki/Dysgraphia">dysgraphia</a>.
       </li>
     </ul>
+    <p>See also <a href="https://www.disabled-world.com/disability/types/cognitive/">Cognitive Disability: Information on Intellectual Disabilities</a>
+    on the website Disabled World.</p>
 
     <h2>How to Talk (Or Not to Talk) to People with Disabilities</h2>
     <ul>
