SMART-ASD: no date for second run.

--- a/courses.html
+++ b/courses.html
@@ -147,7 +147,8 @@
         Autism Spectrum Disorder (<abbr>ASD</abbr>) who als have an Intellectual Disability (<abbr>ID</abbr>).
         The course is aimed at parents, carers and practitions and does not require
         any previous experience of the subject.
-        The first run of the course started on 3 April 2017.
+        The first run of the course started on 3 April and ended on 30 April 2017.
+        A date for the second run has not been announced yet.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/autism">Understanding Autism</a>
