Updates on course dates.

--- a/courses.html
+++ b/courses.html
@@ -123,7 +123,7 @@
         <a href="https://www.futurelearn.com/courses/internet-aging">Internet of Things for Active Aging</a>
         is a 4-week course by Taipei Medical University, hosted on FutureLearn.
         The first run of the course started on 17 October 2016 and ended on 13 November;
-        the second run started on 3 April 2017.  
+        the second run started on 3 April 2017. The next run has not been announced yet.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
@@ -158,7 +158,8 @@
       <li>
         <a href="https://www.canvas.net/browse/ryersonu/courses/web-access-auditing-2">Professional Web Accessibility Auditing Made Easy</a>
         is a 4-week course by Ryerson University, hosted on Canvas.
-        The latest run of the course started on 14 November and ended on 12 December 2016.
+        The previous run of the course started on 14 November and ended on 12 December 2016.
+        The next run is scheduled from 12 June till 10 July 2017.
         The course required 3–5 hours of study per week.
       </li>
       <li>
