Several courses added.

--- a/courses.html
+++ b/courses.html
@@ -40,9 +40,18 @@
 
   <main>
 
+    <p>This page does not aim to be exhaustive. 
+      To search for courses that are not listed here, one can use
+      <a href="https://www.coursetalk.com/">CourseTalk</a>
+      and
+      <a href="https://www.class-central.com/">Class Central</a>.
+      Both sites allow registered users to rate and review courses.
+    </p>
+
     <h2 id="moocsona11y"><abbr title="massive open online courses">MOOCs</abbr> About Accessibility</h2>
 
     <h3>General or Introductory Courses</h3>
+    <p>This sections lists courses that provide a general introduction to <abbr>ICT</abbr> accessibility.</p>
     <ul>
       <li>
         <a href="https://www.futurelearn.com/courses/digital-accessibility">Digital Accessibility: Enabling Participation in the Information Society</a>
@@ -80,6 +89,12 @@
         was the same course as above but hosted on Coursera. This course is no longer available on Coursera.
       </li>
       -->
+      <li>
+        <a href="https://teamtreehouse.com/library/accessibility">Accessibility</a>
+        by Nick Pettit is a course hosted on Treehouse.
+        It is described as a <q>101-minute HTML Course</q>.
+        (Access to Treehouse requires a monthly subscription.)
+      </li>
     </ul>
 
     <h3>Web Accessibility</h3>
@@ -117,10 +132,35 @@
         The next run is scheduled from 12 June till 10 July 2017.
         The course requires 3–5 hours of study per week.
       </li>
+      <li>
+        <a href="https://teamtreehouse.com/library/web-accessibility-compliance">Web Accessibility Compliance</a>
+        by Aisha Blake is a course hosted on Treehouse.
+        It is described as a <q>24-minute Development Tools Course</q>.
+        (Access to Treehouse requires a monthly subscription.)
+      </li>
+      <li>
+        <a href="https://webdesign.tutsplus.com/courses/a-beginners-guide-to-web-accessibility">A Beginner&#39;s Guide to Web Accessibility</a>
+        by John Hartley is a course hosted on Tuts+. It contains 23 lessons.
+      </li>
     </ul>
 
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
+      <li>
+        <a href="https://www.udemy.com/accessibility-features-on-android/">Accessibility Features on Android</a>
+        by Sami Rahman is a free course hosted on Udemy.
+        It consists of 34 lectures and was last updated in September 2013.
+      </li>
+      <li>
+        <a href="https://www.udemy.com/accessibility-features-of-ios-for-the-ipad-and-iphone/">Accessibility Features of iOS for the iPad and iPhone</a>
+        by Sami Rahman is a free course hosted on Udemy.
+        It consists of 41 lectures and was last updated in April 2013.
+      </li>
+      <li>
+        <a href="https://www.pluralsight.com/courses/incorporating-accessibility-into-ux-process-illustrator-1754">Incorporating Accessibility into the UX Process in Illustrator</a>
+        by Stacey Swinehart is a short course (90 minutes) hosted on Pluralsight.
+        Access to Pluralsight requires a monthly subscription.
+      </li>
       <li>
         <a href="https://www.futurelearn.com/courses/supporting-autism">SMART-<abbr>ASD</abbr>: Matching Autistic People with Technology Resources</a>
         by the University of Bath (<abbr>UK</abbr>) is a 4-week course hosted on FutureLearn.
