Windows 10 a11y tools (TechRadar)

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -60,6 +60,11 @@
           </li>
         </ul>
       </li>
+      <li>Cat Ellis: 
+        <a href="http://www.techradar.com/how-to/how-to-use-the-accessibility-tools-in-windows-10">How to use the accessibility tools in Windows 10</a>,
+        <i class="website">TechRadar</i>, May 2017.
+        Overview of accessibility features, for end users.
+      </li>
       <li>Bill Holton (<abbr title="American Foundation for the Blind">AFB</abbr>):
         <a href="http://www.afb.org/info/living-with-vision-loss/using-technology/using-a-computer/123">Using
         a Computer with a Visual Impairment: A Beginner's Guide to Computer Accessibility</a>.
