Mendlesohn: Disability on Campus (THE).

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
       <li>TravelWayfinding.com: 
         <a href="http://www.travelwayfinding.com/visually-impaired/">Visually Impaired and Blind Travellers Wayfinding Issues and Solutions</a>.
       </li>
+      <li>Mendlesohn, Farah:
+        <a href="https://www.timeshighereducation.com/blog/disability-campus-we-do-not-practise-best-practice-and-it-high-time-we-did">Disability on Campus: ‘We do not practise best practice, and it is high time that we did’</a>,
+        <i class="magazine">Times Higher Education</i>, 17 May 2017.
+      </li>
       <!-- 
       <li>
         <a href=""></a>
@@ -223,6 +227,11 @@
       <!-- Legislation and policy:
         * European Commission: European Accessibility Act: http://ec.europa.eu/social/main.jsp?catId=1202 
         * United Nations: Convention on the Rights of Persons with Disabilities (CRPD): https://www.un.org/development/desa/disabilities/convention-on-the-rights-of-persons-with-disabilities.html 
+      -->
+      <!-- Example pages:
+        * with old-fashioned frames: "TITUS: Thesaurus Indogermanischer Text- und Sprachmaterialien": http://titus.fkidg1.uni-frankfurt.de/indexe.htm 
+        * with old-fashioned pop-up menu: http://www.alanwood.net/unicode/cjk_unified_ideographs.html 
+        * noscript element (visible with NoScript enabled in the browser): http://www.apress.com/us/book/9781484219157 & https://communities.ca.com/ideas/235735203 etc etc.
       -->
   </main>
 
