+ Fonts for dyslexia; Windows 10 improvements.

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -83,6 +83,10 @@
         <a href="http://www.windows8facile.fr/configurer-windows-pour-malvoyant/">Configurer Windows pour les malvoyants</a>,
         01.04.2014.
       </li>
+      <li>
+        <a href="https://mspoweruser.com/windows-10-build-16215-brings-significant-accessibility-improvements/">Windows 10 Build 16215 brings significant accessibility improvements including colour filters for the colourblind</a>,
+        <i class="website">MSPowerUser</i>, 09.07.2017.
+      </li>
     </ul>
 
     <h2 id="ua_extensionuser">Browser Features and Extensions for End Users</h2>
@@ -111,6 +115,23 @@
       </li>
       <li><a href="http://chronic-illness-support.tumblr.com/post/121510449113/chrome-extensions-for-disabilities-masterpost">chrome extensions for disabilities masterpost</a>
         (June 2015): a list of extensions for people with reading disabilities.
+      </li>
+    </ul>
+
+
+    <h2>Fonts for Dyslexia</h2>
+    <p>The following fonts were specially developed for readers with dyslexia.
+    </p>
+    <ul>
+      <li>
+        <a href="https://opendyslexic.org/">OpenDyxlexic</a> (free).
+      </li>
+      <li>
+        <a href="https://www.dyslexiefont.com/">Dyslexie font</a> (not free, except for home use).
+      </li>
+      <li>
+        <a href="http://www.k-type.com/fonts/lexie-readable/">Lexie Readable</a> (formerly Lexia Readable;
+        not free, except for personal, educational or charity use).
       </li>
     </ul>
 
