FL: Inclusive Learning and Teaching.

--- a/courses.html
+++ b/courses.html
@@ -73,7 +73,7 @@
         is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
         The <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" lang="fr">first session</a> 
         of the course started on 7 November 2016 and ran for five weeks.
-        The second run of the course starts on 9 May 2017. The course requires 2 to 3 hours of study per week.
+        The second run of the course started on 9 May 2017. The course requires 2 to 3 hours of study per week.
         (See also the 
         <a href="http://www.echosciences-grenoble.fr/annonces/mooc-accessibilite-numerique-bientot-disponible-sur-la-plateforme-france-universite-numerique" lang="fr" hreflang="fr">MOOC « Accessibilité Numérique » bientôt disponible sur la plateforme France Université Numérique</a>
         on <span lang="fr">Echosciences Grenoble</span>.)
@@ -146,6 +146,11 @@
 
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
+      <li>
+        <a href="https://www.futurelearn.com/courses/inclusive-learning-teaching">Inclusive Learning and Teaching Environments</a>
+        is a three-week course by the University of Southampton hosted on FutureLearn.
+        The first run started on 5 June 2017.
+      </li>
       <li>
         <a href="https://www.udemy.com/accessibility-features-on-android/">Accessibility Features on Android</a>
         by Sami Rahman is a free course hosted on Udemy.
