--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -42,7 +42,7 @@
   </nav>
 
   <main>
-    <p>This pages contains reference to tips and advice for computer users.
+    <p>This page contains reference to tips and advice for computer users.
       Most computer users are no technical experts and are unaware of what they can
       do to improve the accessibility of the technology they use.
     </p>
